--- a/Descriptive_Statistics.html
+++ b/Descriptive_Statistics.html
@@ -337,6 +337,22 @@ $(document).ready(function () {
   addClassKlippyTo("pre.r, pre.markdown");
   addKlippy('left', 'top', 'auto', '1', 'Copy code', 'Copied!');
 </script>
+<div id="opening-datasets" class="section level2">
+<h2>Opening datasets</h2>
+<p>Sometimes pre-existing datasets are imported into R Studio. There are several different types of datasets that can be imported. The ones used most frequently in this course are from Excel and SPSS. Types of computer files are indicated by what follows the period (“.”) in the file name. For example file.docx is a type of word file.</p>
+<p>Here’s a list of common file types we’ll use.</p>
+<ul>
+<li>Excel = .xlsx</li>
+<li>SPSS = .sav</li>
+<li>Comma Seperated Values = .csv</li>
+</ul>
+<p>One files we’ll be using today is the <em>Album Sales</em> file. On the moodle page for the course at the very top underneath the link for zoom sessions, you’ll see a folder with SPSS Data Sets. When you click on the folder you’ll see a list of datasets. Click on the one that says, “Album Sales.sav” and download it to your computer.</p>
+<p>Once the file is downloaded go to the upper right pane in R Studio. Under the environment tab you’ll see a button that says “Import Dataset”. Click on the button and you’ll get several different options. Go to the one that says “From SPSS” and click on it. At the top of the window you’ll need to find the file you are importing to open it. Click on the Browse buttom to find the file. Once you find it click open and it will give you a preview of the file in the window. Then all you need to do is click import.</p>
+<p>Here is the code for importing the file</p>
+<pre class="r"><code>library(haven)
+Album_Sales &lt;- read_sav(&quot;Album Sales.sav&quot;)
+View(Album_Sales)</code></pre>
+</div>
 <div id="descriptive-statistics" class="section level2">
 <h2>Descriptive Statistics</h2>
 <p>Descriptive statisitics are just what the name implies, they are used to <em>describe</em> a dataset. This is different from <em>inferential</em> statistics, which are used to <em>infer</em> population paramenters based on a sample.</p>
@@ -344,20 +360,66 @@ $(document).ready(function () {
 \frac{\Sigma X}{N}
 \]</span> The captial Greek letter Sigma in the numerator stands for sum and X stands in for all the values in a dataset with the N standing for the number of values in the dataset. In R Studio, we simply use the mean command to find the mean for a particular variable</p>
 <pre class="r"><code>mean(diamonds$carat)</code></pre>
+<pre><code>## [1] 0.7979397</code></pre>
 <p>There are two other measures of central tendency that are often used in statistics, <em>median</em> and <em>mode</em>. The median is simply the center score, so to find it, you simply rank order your values from lowest to highest and the middle score in that rank order. For even scores you take the two middle scores add them and divide them by two. For odd scores there is only one middle score. Here again, R gives us an easy way to find the median.</p>
 <pre class="r"><code>median(diamonds$carat)</code></pre>
+<pre><code>## [1] 0.7</code></pre>
 <p>The mode is the score or value with the highest frequency in your dataset. So whatever value occurs the most times is the mode. For some reason, mode is not part of the basic R package, so you need to install the “modeest” package if you need to find this descriptive statistic.</p>
 <pre class="r"><code>library(modeest)</code></pre>
 <p>Once the library is installed use the mfv command</p>
 <pre class="r"><code>mfv(diamonds$carat)</code></pre>
+<pre><code>## [1] 0.3</code></pre>
 <p>We tend to use the mean most often for central tendency, but it’s more effected by extreme scores. So if you have several low or high outliers, the median may be a more accurate representation of the data. More often then not, we’ll use the mean. The mode is a more straightforward measure. So if you were interested in the most popular song on an album based on downloads, you would find the mode. The most is often very helpful with categorical data.</p>
 <p>The second important aspect of descriptive statistics is variability or dispersion in a dataset. This typically represents how the rest of the dataset relates to the mean. For example: are the scores close to or widely dispersed from the mean?</p>
 <p>Range</p>
 <p>The first measure of dispersion is range. This is simply subtracting the highest score from the lowest score. So the first thing you need to do is rank order your scores from lowest to highest. Pick out the highest and lowest scores and subtract them.</p>
 <p>So Let’s look at those album sales advertising data.</p>
 <pre class="r"><code>Album_Sales$Adverts</code></pre>
+<pre><code>##   [1]   10.256  985.685 1445.563 1188.193  574.513  568.954  471.814  537.352
+##   [9]  514.068  174.093 1720.806  611.479  251.192   97.972  406.814  265.398
+##  [17] 1323.287  196.650 1326.598 1380.689  792.345  957.167 1789.659  656.137
+##  [25]  613.697  313.362  336.510 1544.899   68.954  785.692  125.628  377.925
+##  [33]  217.994  759.862 1163.444  842.957  125.179  236.598  669.811  612.234
+##  [41]  922.019   50.000 2000.000 1054.027  385.045 1507.972  102.568  204.568
+##  [49] 1170.918  689.547  784.220  405.913  179.778  607.258 1542.329 1112.470
+##  [57]  856.985  836.331  236.908 1077.855  579.321 1500.000  731.364   25.689
+##  [65]  391.749  233.999  275.700   56.895  255.117  566.501  102.568  250.568
+##  [73]   68.594  642.786 1500.000  102.563  756.984   51.229  644.151   15.313
+##  [81]  243.237  256.894   22.464   45.689  724.938 1126.461 1985.119 1837.516
+##  [89]  135.986  237.703  976.641 1452.689 1600.000  268.598  900.889  982.063
+##  [97]  201.356  746.024 1132.877 1000.000   75.896 1351.254  202.705  365.985
+## [105]  305.268  263.268  513.694  152.609   35.987  102.568  215.368  426.784
+## [113]  507.772  233.291 1035.433  102.642  526.142  624.538  912.349  215.994
+## [121]  561.963  474.760  231.523  678.596   70.922 1567.548  263.598 1423.568
+## [129]  715.678  777.237  509.430  964.110  583.627  923.373  344.392 1095.578
+## [137]  100.025   30.425 1080.342  799.899 1071.752  893.355  283.161  917.017
+## [145]  234.568  456.897  206.973 1294.099  826.859  564.158  192.607   10.652
+## [153]   45.689   42.568   20.456  635.192 1002.273 1177.047  507.638  215.689
+## [161]  526.480   26.895  883.877    9.104  103.568  169.583  429.504  223.639
+## [169]  145.585  985.968  500.922  226.652 1051.168   68.093 1547.159  393.774
+## [177]  804.282  801.577  450.562   26.598  179.061  345.687  295.840 2271.860
+## [185] 1134.575  601.434   45.298  759.518  832.869   56.894  709.399   56.895
+## [193]  767.134  503.172  700.929  910.851  888.569  800.615 1500.000  785.694
+## attr(,&quot;label&quot;)
+## [1] &quot;Advertsing budget (thousands)&quot;
+## attr(,&quot;format.spss&quot;)
+## [1] &quot;F8.2&quot;</code></pre>
 <p>Notice how the variable isn’t currently ranked from lowest to highest. But we can use the “arrange” command from tidyverse to sort the dataset from lowest to highest by the Advertising variable and then pick out the numbers we need for the range</p>
 <pre class="r"><code>arrange(Album_Sales, Adverts)</code></pre>
+<pre><code>## # A tibble: 200 x 4
+##    Adverts Sales Airplay Image
+##      &lt;dbl&gt; &lt;dbl&gt;   &lt;dbl&gt; &lt;dbl&gt;
+##  1    9.10   120      53     8
+##  2   10.3    330      43    10
+##  3   10.7     90      39     5
+##  4   15.3    110      22     5
+##  5   20.5     40      13     8
+##  6   22.5    100       1     6
+##  7   25.7    100      23     6
+##  8   26.6    220      47     8
+##  9   26.9     60      19     6
+## 10   30.4     60      28     1
+## # … with 190 more rows</code></pre>
 <p>The we just simply pick out the lowest and highest numbers</p>
 <p>lowest = 9.104 highest = 2271.860</p>
 <p>Then we subtract them.</p>
@@ -379,7 +441,19 @@ variance(s^2) = \frac {SS}{N-1} = \frac {\Sigma(x-\bar x)^2}{N-1}
 \]</span> This number is closer to the original units of measurement, but to make it more accurate, the original squared values need to be taken back out of the measure. To do this, the square root of the variance is calculated.</p>
 <p><span class="math display">\[
 s = \sqrt {\frac {\Sigma (x- \bar x)^2}{N-1}}
-\]</span> Quartiles? Interquartile range?</p>
+\]</span> Another helpful type of range is the <em>interquartile range</em>, which is the range of numbers from the 25th and 75th percentile. Percentiles are just dividing up a dataset based on where certain scores are based on percentages. For example, we can look at what score is at the 50th percentile. To do that we use the <strong>quantile</strong> command (a <em>quantile</em> is the same thing as a <em>percentile</em>). x is the variable we are analyzing, and .5 is the percentile (.5 = 50%; .35 = 35%)</p>
+<pre class="r"><code>quantile(x = diamonds$carat, probs = .5)</code></pre>
+<pre><code>## 50% 
+## 0.7</code></pre>
+<p>So the number at the 50th percentile is 0.7. Notice that this is the same as the median, described earlier. Remember that the median is the number from the dataset that is in the middle or center of the dataset. Because the mean is calculated, it may or may not be a number in the dataset. The mean is the number that describes the closest number to the average, but may or may not be a number contained in the dataset.</p>
+<p>So to find the interquartile range, we want our two quartiles or numbers at “quarters” of the dataset, so 25% and 75%. Think of a dollar, which is made up of 4 quarters. We already know that half a dolar is 50 cents, which would be the median, but the other two quartiles (quarters) would be 25 cents and 75 cents.</p>
+<pre class="r"><code>quantile(x = diamonds$carat, probs = c(.25, .75))</code></pre>
+<pre><code>##  25%  75% 
+## 0.40 1.04</code></pre>
+<p>Finally, to get the interquartile ranks we simply subtract these two numbers.</p>
+<pre class="r"><code>1.04-.40</code></pre>
+<pre><code>## [1] 0.64</code></pre>
+<p>So the interquartile range is 0.64.</p>
 </div>
 
 
