--- a/Regression.html
+++ b/Regression.html
@@ -279,6 +279,9 @@ $(document).ready(function () {
     <li>
       <a href="Bar_Graphs_CI.html">Bar Graphs with 95% CIs</a>
     </li>
+    <li>
+      <a href="Histograms.html">Histograms</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
@@ -375,7 +378,8 @@ album\;sales = 50 + (100 \times 5)
 ## (Intercept) 1.341e+02  7.537e+00  17.799   &lt;2e-16 ***
 ## Adverts     9.612e-02  9.632e-03   9.979   &lt;2e-16 ***
 ## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
+## Signif. codes:  
+## 0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
 ## 
 ## Residual standard error: 65.99 on 198 degrees of freedom
 ## Multiple R-squared:  0.3346, Adjusted R-squared:  0.3313 
