--- a/Descriptive_Statistics.html
+++ b/Descriptive_Statistics.html
@@ -374,50 +374,37 @@ View(Album_Sales)</code></pre>
 <pre><code>## [1] 0.3</code></pre>
 <p>We tend to use the mean most often for central tendency, but it’s more effected by extreme scores. So if you have several low or high outliers, the median may be a more accurate representation of the data. More often then not, we’ll use the mean. The mode is a more straightforward measure. So if you were interested in the most popular song on an album based on downloads, you would find the mode. The most is often very helpful with categorical data.</p>
 <p>The second important aspect of descriptive statistics is variability or dispersion in a dataset. This typically represents how the rest of the dataset relates to the mean. For example: are the scores close to or widely dispersed from the mean?</p>
-<p>Range</p>
+</div>
+<div id="range" class="section level2">
+<h2>Range</h2>
 <p>The first measure of dispersion is range. This is simply subtracting the highest score from the lowest score. So the first thing you need to do is rank order your scores from lowest to highest. Pick out the highest and lowest scores and subtract them.</p>
 <p>So Let’s look at those album sales advertising data.</p>
 <pre class="r"><code>Album_Sales$Adverts</code></pre>
-<pre><code>##   [1]   10.256  985.685 1445.563 1188.193  574.513
-##   [6]  568.954  471.814  537.352  514.068  174.093
-##  [11] 1720.806  611.479  251.192   97.972  406.814
-##  [16]  265.398 1323.287  196.650 1326.598 1380.689
-##  [21]  792.345  957.167 1789.659  656.137  613.697
-##  [26]  313.362  336.510 1544.899   68.954  785.692
-##  [31]  125.628  377.925  217.994  759.862 1163.444
-##  [36]  842.957  125.179  236.598  669.811  612.234
-##  [41]  922.019   50.000 2000.000 1054.027  385.045
-##  [46] 1507.972  102.568  204.568 1170.918  689.547
-##  [51]  784.220  405.913  179.778  607.258 1542.329
-##  [56] 1112.470  856.985  836.331  236.908 1077.855
-##  [61]  579.321 1500.000  731.364   25.689  391.749
-##  [66]  233.999  275.700   56.895  255.117  566.501
-##  [71]  102.568  250.568   68.594  642.786 1500.000
-##  [76]  102.563  756.984   51.229  644.151   15.313
-##  [81]  243.237  256.894   22.464   45.689  724.938
-##  [86] 1126.461 1985.119 1837.516  135.986  237.703
-##  [91]  976.641 1452.689 1600.000  268.598  900.889
-##  [96]  982.063  201.356  746.024 1132.877 1000.000
-## [101]   75.896 1351.254  202.705  365.985  305.268
-## [106]  263.268  513.694  152.609   35.987  102.568
-## [111]  215.368  426.784  507.772  233.291 1035.433
-## [116]  102.642  526.142  624.538  912.349  215.994
-## [121]  561.963  474.760  231.523  678.596   70.922
-## [126] 1567.548  263.598 1423.568  715.678  777.237
-## [131]  509.430  964.110  583.627  923.373  344.392
-## [136] 1095.578  100.025   30.425 1080.342  799.899
-## [141] 1071.752  893.355  283.161  917.017  234.568
-## [146]  456.897  206.973 1294.099  826.859  564.158
-## [151]  192.607   10.652   45.689   42.568   20.456
-## [156]  635.192 1002.273 1177.047  507.638  215.689
-## [161]  526.480   26.895  883.877    9.104  103.568
-## [166]  169.583  429.504  223.639  145.585  985.968
-## [171]  500.922  226.652 1051.168   68.093 1547.159
-## [176]  393.774  804.282  801.577  450.562   26.598
-## [181]  179.061  345.687  295.840 2271.860 1134.575
-## [186]  601.434   45.298  759.518  832.869   56.894
-## [191]  709.399   56.895  767.134  503.172  700.929
-## [196]  910.851  888.569  800.615 1500.000  785.694
+<pre><code>##   [1]   10.256  985.685 1445.563 1188.193  574.513  568.954  471.814  537.352
+##   [9]  514.068  174.093 1720.806  611.479  251.192   97.972  406.814  265.398
+##  [17] 1323.287  196.650 1326.598 1380.689  792.345  957.167 1789.659  656.137
+##  [25]  613.697  313.362  336.510 1544.899   68.954  785.692  125.628  377.925
+##  [33]  217.994  759.862 1163.444  842.957  125.179  236.598  669.811  612.234
+##  [41]  922.019   50.000 2000.000 1054.027  385.045 1507.972  102.568  204.568
+##  [49] 1170.918  689.547  784.220  405.913  179.778  607.258 1542.329 1112.470
+##  [57]  856.985  836.331  236.908 1077.855  579.321 1500.000  731.364   25.689
+##  [65]  391.749  233.999  275.700   56.895  255.117  566.501  102.568  250.568
+##  [73]   68.594  642.786 1500.000  102.563  756.984   51.229  644.151   15.313
+##  [81]  243.237  256.894   22.464   45.689  724.938 1126.461 1985.119 1837.516
+##  [89]  135.986  237.703  976.641 1452.689 1600.000  268.598  900.889  982.063
+##  [97]  201.356  746.024 1132.877 1000.000   75.896 1351.254  202.705  365.985
+## [105]  305.268  263.268  513.694  152.609   35.987  102.568  215.368  426.784
+## [113]  507.772  233.291 1035.433  102.642  526.142  624.538  912.349  215.994
+## [121]  561.963  474.760  231.523  678.596   70.922 1567.548  263.598 1423.568
+## [129]  715.678  777.237  509.430  964.110  583.627  923.373  344.392 1095.578
+## [137]  100.025   30.425 1080.342  799.899 1071.752  893.355  283.161  917.017
+## [145]  234.568  456.897  206.973 1294.099  826.859  564.158  192.607   10.652
+## [153]   45.689   42.568   20.456  635.192 1002.273 1177.047  507.638  215.689
+## [161]  526.480   26.895  883.877    9.104  103.568  169.583  429.504  223.639
+## [169]  145.585  985.968  500.922  226.652 1051.168   68.093 1547.159  393.774
+## [177]  804.282  801.577  450.562   26.598  179.061  345.687  295.840 2271.860
+## [185] 1134.575  601.434   45.298  759.518  832.869   56.894  709.399   56.895
+## [193]  767.134  503.172  700.929  910.851  888.569  800.615 1500.000  785.694
 ## attr(,&quot;label&quot;)
 ## [1] &quot;Advertsing budget (thousands)&quot;
 ## attr(,&quot;format.spss&quot;)
@@ -436,7 +423,7 @@ View(Album_Sales)</code></pre>
 <p>Often times were interested in the average spread or deviation from the mean. <em>Deviance</em> is the distance from any particular score from the mean. So to find the deviance you simply take the score and subtract it from the mean. <span class="math display">\[
 deviance = x - \bar x
 \]</span> If we wanted to find out the total amount of deviance, we could simply add together the total deviance for each number in our dataset. So the equation would look like this: <span class="math display">\[
-total\;deviance = \Sigma(x=\bar x)
+total\;deviance = \Sigma(x-\bar x)
 \]</span> Unfortunately this equation causes some problems. If you remember, the mean is the average score, so it’s the score at around 50%. But that means that for any dataset about half the scores will be above the mean and half the scores will be below the mean. Or another way to think about it, half the scores will be negative and half the scores will be positive. So if we add up all these scores, the total deviation will be equal to 0. Zero doesn’t tell us much about the spread of the scores.</p>
 <p>The way to overcome this problem is by squaring each deviation score, which makes all the deviation values positive and thus produces a positive number. This number is called the sum of squared errors of the sum of squares (SS) with the following formula. <span class="math display">\[
 sum\;of\;squares (SS) = \Sigma(x-\bar x)^2
@@ -445,7 +432,10 @@ variance(s^2) = \frac {SS}{N-1} = \frac {\Sigma(x-\bar x)^2}{N-1}
 \]</span> This number is closer to the original units of measurement, but to make it more accurate, the original squared values need to be taken back out of the measure. To do this, the square root of the variance is calculated.</p>
 <p><span class="math display">\[
 s = \sqrt {\frac {\Sigma (x- \bar x)^2}{N-1}}
-\]</span> Another helpful type of range is the <em>interquartile range</em>, which is the range of numbers from the 25th and 75th percentile. Percentiles are just dividing up a dataset based on where certain scores are based on percentages. For example, we can look at what score is at the 50th percentile. To do that we use the <strong>quantile</strong> command (a <em>quantile</em> is the same thing as a <em>percentile</em>). x is the variable we are analyzing, and .5 is the percentile (.5 = 50%; .35 = 35%)</p>
+\]</span> To find the standard deviation using R Studio we use the <em>sd</em> command to find it.</p>
+<pre class="r"><code>sd(Album_Sales$Adverts)</code></pre>
+<pre><code>## [1] 485.6552</code></pre>
+<p>Another helpful type of range is the <em>interquartile range</em>, which is the range of numbers from the 25th and 75th percentile. Percentiles are just dividing up a dataset based on where certain scores are based on percentages. For example, we can look at what score is at the 50th percentile. To do that we use the <strong>quantile</strong> command (a <em>quantile</em> is the same thing as a <em>percentile</em>). x is the variable we are analyzing, and .5 is the percentile (.5 = 50%; .35 = 35%)</p>
 <pre class="r"><code>quantile(x = diamonds$carat, probs = .5)</code></pre>
 <pre><code>## 50% 
 ## 0.7</code></pre>
